examples/test/testpolicy19388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19388
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key47: value8
      key41: value6
      key48: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value26
      podSelector:
        matchLabels:
          key5: value23
          key29: value32
          key12: value35
